No need for Area.hpp/cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(PkgConfig)
 pkg_check_modules(LSI REQUIRED libspatialindex)
 
-add_executable(addressextract addressextract.cpp AbstractArea.cpp Area.cpp)
+add_executable(addressextract addressextract.cpp AbstractArea.cpp)
 include_directories("${OSMIUM_INCLUDE_DIRS}")
 include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS})
 target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES})
