Add bbox to output, upgrade CMake nlohmann json dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,9 @@ include_directories(${Boost_INCLUDE_DIRS})
 find_package(PkgConfig)
 pkg_check_modules(LSI REQUIRED libspatialindex)
 
+find_package(nlohmann_json REQUIRED)
+
 add_executable(addressextract addressextract.cpp AbstractArea.cpp)
 include_directories("${OSMIUM_INCLUDE_DIRS}")
 include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS})
-target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES})
-
+target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES} nlohmann_json::nlohmann_json)
