--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,11 +30,15 @@ find_package(Boost 1.55.0 REQUIRED COMPONENTS program_options )
 include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(PkgConfig)
-pkg_check_modules(LSI REQUIRED libspatialindex)
+pkg_check_modules(LSI spatialindex)
+IF(NOT LSI_FOUND)
+	find_path(LSI_INCLUDE_DIRS SpatialIndex.h "/usr/include/spatialindex")
+	find_library(LSI_LIBRARIES spatialindex)
+ENDIF(NOT LSI_FOUND)
 
-find_package(nlohmann_json REQUIRED)
+find_path(JSON_INCLUDE_DIR json.hpp /usr/include/nlohmann/;/usr/include)
 
 add_executable(addressextract addressextract.cpp AbstractArea.cpp)
 include_directories("${OSMIUM_INCLUDE_DIRS}")
-include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS})
-target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES} nlohmann_json::nlohmann_json)
+include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS} ${JSON_INCLUDE_DIR})
+target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES})
