--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libosmium"]
 	path = libosmium
 	url = https://github.com/osmcode/libosmium
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json.git
