--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ find_path(JSON_INCLUDE_DIR
 	/usr/include/
 	/usr/include/
 	${CMAKE_SOURCE_DIR}/json/include
+	${CMAKE_SYSROOT}/usr/local/include
 	)
 message("nlohmann directory ${JSON_INCLUDE_DIR}")
 
