Add binaries and cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 2.6)
+cmake_minimum_required (VERSION 3.25)
 project (addressextract)
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -8,15 +8,7 @@ endif()
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-
-set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
-
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-find_package(Osmium REQUIRED COMPONENTS < pbf io gdal >)
-
-if(NOT OSMIUM_FOUND)
-	message(WARNING "Libosmium not found!\n")
-endif()
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
@@ -26,7 +18,13 @@ else()
         message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
-find_package(Boost 1.55.0 REQUIRED COMPONENTS program_options )
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/libosmium/cmake")
+find_package(Osmium REQUIRED COMPONENTS io gdal)
+
+if(NOT OSMIUM_FOUND)
+	message(WARNING "Libosmium not found!\n")
+endif()
+find_package(Boost 1.55.0 REQUIRED COMPONENTS program_options)
 include_directories(${Boost_INCLUDE_DIRS})
 
 find_package(PkgConfig)
@@ -53,7 +51,7 @@ find_path(JSON_INCLUDE_DIR
 	)
 message("nlohmann directory ${JSON_INCLUDE_DIR}")
 
-add_executable(addressextract addressextract.cpp AbstractArea.cpp)
-include_directories("${OSMIUM_INCLUDE_DIRS}")
-include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS} ${JSON_INCLUDE_DIR})
-target_link_libraries(addressextract ${OSMIUM_LIBRARIES} ${Boost_LIBRARIES} ${LSI_LIBRARIES})
+add_executable(addressextract addressextract.cpp AbstractArea.cpp Address.cpp)
+include_directories(${Boost_INCLUDE_DIRS} ${LSI_INCLUDE_DIRS} ${JSON_INCLUDE_DIR} ${OSMIUM_INCLUDE_DIRS})
+
+target_link_libraries(addressextract ${Boost_LIBRARIES} ${LSI_LIBRARIES} ${OSMIUM_LIBRARIES})
