--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ buildstable:
     - make -C build
 
 buildlatestdep:
+  image: amd64/debian:bookworm
   stage: build
   variables:
     DEBIAN_FRONTEND: "noninteractive"
@@ -34,7 +35,7 @@ buildlatestdep:
     - make -C build
 
 buildlatesttrixie:
-  image: debian/trixie
+  image: amd64/debian:trixie
   stage: build
   variables:
     DEBIAN_FRONTEND: "noninteractive"
@@ -51,3 +52,20 @@ buildlatesttrixie:
     - ( cd build ; cmake .. )
     - make -C build
 
+buildlatestsid:
+  image: amd64/debian:sid
+  stage: build
+  variables:
+    DEBIAN_FRONTEND: "noninteractive"
+    GIT_SUBMODULE_STRATEGY: recursive
+    GIT_BASE: https://gitlab-ci-token:${CI_JOB_TOKEN}@gl.zz.de
+  script:
+    - apt-get update && apt-get -fuy install git
+    - git clone ${GIT_BASE}/mirror/libosmium
+    - git clone ${GIT_BASE}/mirror/nlohmann-json json
+    - git clone ${GIT_BASE}/mirror/protozero
+    - apt-get update
+    - apt-get install -fuy build-essential cmake cmake-data libboost-all-dev libspatialindex-dev libgdal-dev libbz2-dev libexpat1-dev
+    - mkdir build
+    - ( cd build ; cmake .. )
+    - make -C build
